fix(Fixed some javascript and html styling issues)

--- a/.htaccess
+++ b/.htaccess
@@ -136,3 +136,73 @@ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
 </IfModule>
 
 Options -Indexes
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:daqymehyby
+allow from 103.21.244.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE daqymehyby:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:BejuGyruzy
+allow from 103.22.200.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE BejuGyruzy:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:aJatapysym
+allow from 103.31.4.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE aJatapysym:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:vuGaDyvuXa
+allow from 104.16.0.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE vuGaDyvuXa:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:ryXuTaquha
+allow from 108.162.192.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE ryXuTaquha:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:aHatuRyQuZ
+allow from 131.0.72.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE aHatuRyQuZ:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:jaJeTujaRu
+allow from 141.101.64.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE jaJeTujaRu:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:deWeguHuSe
+allow from 162.158.0.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE deWeguHuSe:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:aseHuZeByW
+allow from 172.64.0.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE aseHuZeByW:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:GuTaveNaSa
+allow from 173.245.48.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE GuTaveNaSa:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:uqeLyQyLes
+allow from 188.114.96.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE uqeLyQyLes:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:DaZybaLuge
+allow from 190.93.240.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE DaZybaLuge:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:uBaduMySuv
+allow from 197.234.240.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE uBaduMySuv:IPALLOWID
+
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW IPALLOWID:PuXypySuvu
+allow from 198.41.128.0
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE PuXypySuvu:IPALLOWID
+
